<resources>
    <string name="app_name">Roadtrip</string>

    <!--Login Activity-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!--Register Activity-->
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="repassword">Re-enter Password</string>

    <!--Home Activity-->
    <string name="create_trip">Create a Trip</string>
    <string name="join_trip">Join a Trip</string>
    <string name="logout">Logout</string>

    <!--Create Trip Activity-->
    <string name="creating_trip">Creating Trip</string>
    <string name="destination">Destination</string>
    <string name="next">Next</string>

    <!--Join Trip Activity-->
    <string name="joining_trip">Joining Trip</string>
    <string name="join">Join</string>
    <string name="enter_trip_code">Enter your trip code</string>

    <!--Lobby Activity-->
    <string name="your_code">Your Code</string>
    <string name="members">Members</string>
    <string name="start">Start</string>
    <string name="empty">Empty</string>
    <string name="trip_code">Trip Code:</string>
    <string name="refresh">Refresh</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicHJhc2hhbm5lcyIsImEiOiJjandycjQzaWMwMWJoNDhwMWp6ZWJpamduIn0.0wj_oyzjMiF4msNVo4aP_Q</string>
    <string name="switchview">Switch View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewmembers">View Members</string>
    <string name="sendMessage">Send Message</string>

</resources>
