<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LobbyActivity">

    <TextView
        android:id="@+id/tv_yourcode"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:hint="@string/your_code"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tripcode" />

    <TextView
        android:id="@+id/tv_tripcode"
        android:layout_width="198dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:text="@string/trip_code"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/members"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <TableLayout
        android:id="@+id/tbl_members"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">

        <!-- Row 1 -->

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="28dp">

            <TextView
                android:id="@+id/tv_mem1"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:hint="@string/empty"
                android:padding="20dip"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_mem2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/empty"
                android:padding="20dip"
                android:textColor="#000000" />

        </TableRow>

        <!-- Row 2 -->

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="28dp">

            <TextView
                android:id="@+id/tv_mem3"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:hint="@string/empty"
                android:padding="20dip"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_mem4"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/empty"
                android:padding="20dip"
                android:textColor="#000000" />

        </TableRow>

        <!-- Row 3 -->

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="28dp">

            <TextView
                android:id="@+id/tv_mem5"
                android:layout_weight="2"
                android:background="#dcdcdc"
                android:gravity="center"
                android:hint="@string/empty"
                android:padding="20dip"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_mem6"
                android:layout_weight="2"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/empty"
                android:padding="20dip"
                android:textColor="#000000" />

        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toTopOf="@+id/tbl_members"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>